# python-project-lvl3

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  dir_for_resources.py  download.py  html_adaptor.py  html_crawler.py  html_page.py  img_download.py  log_config.py  logger.py  parsing.py  resources.py  resources_download.py  url_to_name.py
page_loader/scripts/: page_loader.py
tests/: test_download.py
