[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
flake8 = ">=3.9.2,<=4.0.1"
pytest = ">=6.2.5,<=7.1.2"
requests = "^2.28.0"
requests-mock = "^1.9.3"
beautifulsoup4 = "^4.11.1"
pook = "^1.0.2"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
