[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Downloads html page and resources from the links, which this page contains"
authors = ["Dddarknight <9801677@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["download", "beautifulsoup"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Internet"
]
repository = "https://github.com/Dddarknight/python-project-lvl3"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = ">=3.9.2,<=4.0.1"
pytest = ">=6.2.5,<=7.1.2"
pytest-cov = "^2.11.1"
requests-mock = "^1.9.3"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
